# atistats-1bb60884

./: .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  PP.md  ProjectStatus.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20240101_000000_initial_schema.py
nginx/: nginx.conf
scripts/: backup.sh  init-db.sql  pre_launch_check.py  seed_data.py
src/: __init__.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  ati_requests.py  ingestion.py  public_bodies.py
src/core/: config.py
src/db/: __init__.py  base.py  session.py
src/models/: __init__.py  ati_request.py  public_body.py
src/repositories/: __init__.py  ati_request.py  base.py  public_body.py
src/schemas/: __init__.py  ati_request.py  ingestion.py  public_body.py
src/services/: __init__.py
src/services/ingestion/: __init__.py  csv_parser.py  ingestion_service.py  result.py  transformers.py  validators.py
src/templates/: base.html  compare.html  dashboard.html
src/templates/errors/: 404.html
src/templates/public_bodies/: detail.html  list.html
src/templates/requests/: detail.html  list.html
src/ui/: __init__.py  routes.py
tests/: __init__.py  conftest.py  test_api_ati_requests.py  test_api_ingestion.py  test_api_public_bodies.py  test_csv_parser.py  test_health.py  test_schemas.py  test_transformers.py  test_ui_routes.py  test_validators.py
